fix floating buttons behind modal (e.g. close in draw) on mobile

--- a/frontend/src/assets/css/style.styl
+++ b/frontend/src/assets/css/style.styl
@@ -1119,7 +1119,7 @@ div.float-left-bottom
   border-radius: 25px
   color: white
   text-align: center
-  z-index: 1051
+  z-index: 1060
 
 div.float-right-top
   bottom: 175px
